--- a/example/package.json
+++ b/example/package.json
@@ -21,8 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
-    "zod": "^3.21.4",
-    "auto-t3-admin": "file:.."
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
