add baseUrl support and simplify form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./"
   },
-  "files": ["./src/index.ts"]
+  "files": ["./src/index.ts"],
+  "include": ["./typings.d.ts"]
 }
