--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
-    "@tanstack/react-query": "^4.29.19",
-    "luxon": "3",
+    "luxon": "^3.3.0",
+    "tslib": "^2.6.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -40,7 +40,7 @@
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-esbuild": "^5.0.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "typescript": "5"
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
     "@prisma/client": "4.12.0",
