--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@prisma/client": "^4.14.0",
+    "@prisma/client": "^4.16.2",
     "@rollup/plugin-typescript": "^11.1.2",
-    "@types/luxon": "3",
-    "@types/react": "^18",
-    "esbuild": "^0.18.10",
-    "next": "^13.4.2",
+    "@types/luxon": "^3.3.0",
+    "@types/react": "^18.2.14",
+    "esbuild": "^0.18.11",
+    "next": "^13.4.7",
     "postcss": "^8.4.24",
-    "rollup": "^3.25.3",
+    "rollup": "^3.26.0",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-esbuild": "^5.0.0",
     "rollup-plugin-postcss": "^4.0.2",
