--- a/package.json
+++ b/package.json
@@ -2,15 +2,11 @@
   "name": "auto-t3-admin",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/auto-t3-admin.js",
-  "module": "dist/auto-t3-admin.mjs",
-  "typings": "dist/auto-t3-admin.d.ts",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf ./lib",
-    "build": "rollup -c",
-    "build:esm": "tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
-    "build:cjs": "tsc -p ./configs/tsconfig.cjs.json",
+    "build": "tsup src/index.ts --dts",
     "prepack": "npm run build"
   },
   "repository": {
@@ -25,21 +21,15 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "luxon": "^3.3.0",
-    "tslib": "^2.6.0",
+    "tsup": "^7.1.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@prisma/client": "^4.16.2",
-    "@rollup/plugin-typescript": "^11.1.2",
     "@types/luxon": "^3.3.0",
     "@types/react": "^18.2.14",
-    "esbuild": "^0.18.11",
+    "esbuild-css-modules-plugin": "^2.7.1",
     "next": "^13.4.7",
-    "postcss": "^8.4.24",
-    "rollup": "^3.26.0",
-    "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "rollup-plugin-postcss": "^4.0.2",
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
